fix horizontal scroll bar

--- a/pages/stories/stories.css
+++ b/pages/stories/stories.css
@@ -6,17 +6,17 @@ html {
 }
 body {
   font-family: "DM Sans", sans-serif;
+  overflow-x: hidden;
 }
 main {
   padding-top: 7.2rem;
-  min-width: 100vw;
+
   font-style: normal;
   letter-spacing: 2px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
 }
 main img {
   display: block;
@@ -41,10 +41,9 @@ main img {
   justify-content: center;
 }
 .main-info {
-  max-width: 375px;
+  width: 375px;
 }
 .main-paragraphs {
-  width: 100vw;
   padding: 4.8rem 0 4.8rem 2.9rem;
 }
 .first-p {
